# cbridge-cowa

./: .gitignore  Cargo.toml  README.md  go.work  go.work.sum
contracts/: README.md
contracts/bridge/: Cargo.toml
contracts/bridge/examples/: schema.rs
contracts/bridge/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/cbridge/: Cargo.toml  README.md
contracts/cbridge/src/: contract.rs
contracts/celer-signers/: Cargo.toml  README.md
contracts/celer-signers/examples/: schema.rs
contracts/celer-signers/src/: contract.rs
contracts/pegbridge/: Cargo.toml  README.md  build.rs
contracts/pegbridge/examples/: schema.rs
contracts/pegbridge/src/: contract.rs  error.rs  lib.rs  msg.rs  pegbridge.proto  pegbridge.rs  state.rs
contracts/token/: Cargo.toml
contracts/token/examples/: schema.rs
contracts/token/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/vault/: Cargo.toml  build.rs
contracts/vault/examples/: schema.rs
contracts/vault/schema/: deposit_msg.json  execute_msg.json  get_config_resp.json  instantiate_msg.json  query_msg.json  state.json
contracts/vault/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  vault.proto  vault.rs
cowa-tmpl/: Cargo.toml  cargo-generate.toml
cowa-tmpl/examples/: schema.rs
cowa-tmpl/src/: contract.rs
go-client/: client.go  go.mod  go.sum  types.go
go-client/home_config/keys/injective-888/keyring-file/: demoacc.info
go-client/home_config/keys/sei-devnet-1/keyring-file/: demoacc.info  keyhash
go-client/main/: main.go
go-client/types/: injaccount.go  wasmquery.go  wasmquery.pb.go  wasmtx.go  wasmtx.pb.go
utils/: Cargo.toml  README.md
utils/src/: abi.rs  delayed_transfer.rs  error.rs  func.rs  governor.rs  lib.rs  owner.rs  pauser.rs  signers.rs  volume_control.rs
