[package]
name = "utils"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { version = "0.16.2" }
cosmwasm-storage = { version = "0.16.2" }
cw-controllers = { version = "0.8.1" }
cw-storage-plus = { version = "0.8.1" }
cw2 = { version = "0.8.1" }
cw20 = "0.8.1"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
serde-json-wasm = "0.3.2"
thiserror = { version = "1.0.26" }
hex = "0.4"
hex-literal = "0.3"
sha3 = "0.10.1"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.2" }