[package]
name = "token"
version = "0.1.0"
authors = ["Celer Network"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = false
debug-assertions = false
lto = true
opt-level = 3
overflow-checks = true
rpath = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
cw-controllers = { version = "0.13.2" }
cw-storage-plus = { version = "0.13.2" }
cw2 = { version = "0.13.2" }
cw20-base = { version = "0.13.2", features = ["library"] }
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }

# our own utils crate
utils = { path = "../../utils", version = "0.1.0" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }