[package]
name = "vault"
version = "0.1.0"
authors = ["Celer Network"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = false
debug-assertions = false
lto = true
opt-level = 3
overflow-checks = true
rpath = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
cw-controllers = { version = "0.13.2" }
cw-storage-plus = { version = "0.13.2" }
cw2 = { version = "0.13.2" }
cw20 = "0.13.2"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
serde-json-wasm = "0.3.2"
thiserror = { version = "1.0.26" }
prost = "0.9"
# Only necessary if using Protobuf well-known types:
prost-types = "0.9"
hex = "0.4"

# our own utils crate
utils = { path = "../../utils", version = "0.1.0" }
sei-cosmwasm = { version = "0.4.10" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }

[build-dependencies]
#prost-build = "0.9"
